@@ -58,6 +58,21 @@ template, will be saved to
 /var/log/sbotools
 when the SlackBuild runs.
 .P
+Please note that saved build options will not be displayed
+when
+.B
+CLASSIC
+is set to
+.B
+TRUE\fR\
+\&. See
+.B
+sboconfig(1)
+or
+.B
+sbotools.conf(5)\fR\
+\&.
+.P
 .B
 sboinstall
 will attempt to download the sources from the
