@@ -10,6 +10,13 @@
 #
 # See sboconfig(1) and sbotools.conf(5).
 
+# CLASSIC - if TRUE, enable BUILD_IGNORE and RSYNC_DEFAULT; disable
+# build increment and out-of-tree output for sbocheck; disable
+# displaying saved build options. This is a more traditional look-and-
+# feel.
+
+#CLASSIC=FALSE
+
 # DISTCLEAN - if TRUE, remove source code.
 
 #DISTCLEAN=FALSE
